<resources>
    <string name="app_name">StudentMessageSystem</string>
    <string name="enter_name">请输入姓名</string>
    <string name="enter_age">请输入年龄</string>
    <string name="update_database">提交到数据库</string>
    <string name="show_database">显示数据库内容</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">学生信息记录系统</string>
</resources>
