<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="18dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/colorAccent"
        android:text="@string/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:text="姓名"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:id="@+id/et_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:text="年龄"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age"
            android:id="@+id/et_age"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/sex_rg">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:checked="true"
            android:id="@+id/male_rb"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
            android:id="@+id/female_rb"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_database"
        android:id="@+id/update_database_bt"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_database"
        android:id="@+id/show_database_bt"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/st_lv">

    </ListView>
</LinearLayout>